--- a/lesson03/package.json
+++ b/lesson03/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson01",
+  "name": "green-gis-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "gdal": "^0.10.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.1.2",
     "morgan": "~1.9.1",
